--- a/Pages/HomePage.xaml
+++ b/Pages/HomePage.xaml
@@ -1,27 +1,37 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="GolfClubSelectionApp.HomePage"
-             Title="Golf Club Selection">
-    <VerticalStackLayout Padding="30" Spacing="20">
+             BackgroundColor="Black">
+
+    <VerticalStackLayout Padding="20" Spacing="10">
+
+        <!-- Page Title -->
+        <Label Text="Golf Club Selection"
+           HorizontalOptions="Center"
+           FontAttributes="Bold"
+           FontSize="24"
+           TextColor="FloralWhite"
+           Margin="0,0,0,10"/>
+
         <Button Text="Add New Course"
                 Clicked="OnAddNewCourseClicked"
                 FontSize="24"
                 BackgroundColor="DarkSeaGreen"
-                TextColor="White"/>
+                TextColor="FloralWhite"/>
         <Button Text="Club and Distance"
                 Clicked="OnClubAndDistanceClicked"
                 FontSize="24"
                 BackgroundColor="DarkSeaGreen"
-                TextColor="White"/>
+                TextColor="FloralWhite"/>
         <Button Text="Club Selection"
                 Clicked="OnClubSelectionClicked"
                 FontSize="24"
                 BackgroundColor="DarkSeaGreen"
-                TextColor="White"/>
+                TextColor="FloralWhite"/>
         <Button Text="Exit"
                 Clicked="OnExitClicked"
                 FontSize="24"
                 BackgroundColor="IndianRed"
-                TextColor="White"/>
+                TextColor="FloralWhite"/>
     </VerticalStackLayout>
 </ContentPage>
