--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <Shell
-    x:Class="GolfClubSelectionApp.AppShell"
+    x:Class="KukiGolfClubSelection.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:GolfClubSelectionApp"
-    Title="GolfClubSelectionApp">
+    xmlns:local="clr-namespace:KukiGolfClubSelection"
+    Title="KukiGolfClubSelection">
 
     <ShellContent
         Title="Home"
