--- a/Platforms/Windows/App.xaml
+++ b/Platforms/Windows/App.xaml
@@ -1,8 +1,8 @@
 ﻿<maui:MauiWinUIApplication
-    x:Class="GolfClubSelectionApp.WinUI.App"
+    x:Class="KukiGolfClubSelection.WinUI.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:maui="using:Microsoft.Maui"
-    xmlns:local="using:GolfClubSelectionApp.WinUI">
+    xmlns:local="using:KukiGolfClubSelection.WinUI">
 
 </maui:MauiWinUIApplication>
