--- a/Resources/Styles/Colors.xaml
+++ b/Resources/Styles/Colors.xaml
@@ -15,6 +15,10 @@
 
     <Color x:Key="White">White</Color>
     <Color x:Key="Black">Black</Color>
+    <Color x:Key="FloralWhite">#FFFAF0</Color>
+    <Color x:Key="WhiteSmoke">#F5F5F5</Color>
+    <Color x:Key="Gainsboro">#DCDCDC</Color>
+    <Color x:Key="DarkGray">#2D2D2D</Color>
     <Color x:Key="Magenta">#D600AA</Color>
     <Color x:Key="MidnightBlue">#190649</Color>
     <Color x:Key="OffBlack">#1f1f1f</Color>
